# TokenWatch

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DOMAIN.md  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
config/: settings.py
deploy/: cloud-run.md  production.env.example  token-tracker.example.conf  tokenwatch.example.conf
src/: cli.py
src/api/: routes.py
src/core/: alerts.py  auth.py  budget.py  cache.py  preflight.py  pricing.py  prompt_optimizer.py  recommendations.py  token_counter.py
src/middleware/: rate_limiter.py
src/models/: schemas.py
src/services/: analytics.py  projects.py  proxy.py  request_logger.py
templates/: dashboard.html  index.html  setup.html
tests/: test_admin_auth.py  test_alerts.py  test_api.py  test_cache.py  test_cli.py  test_dashboard.py  test_export.py  test_persistence_budget_proxy.py  test_pricing.py  test_projects.py  test_prompt_optimizer.py  test_rate_limiter.py  test_recommendations.py  test_request_logger.py  test_token_counter.py  test_webhooks.py
