[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenwatch"
version = "0.1.0"
description = "Local AI API spend monitoring, proxying, and budget control."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Escipion Pedroza" }]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "openai>=1.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
  "tiktoken>=0.7.0",
  "aiosqlite>=0.20.0",
  "rich>=13.7.0",
  "python-dateutil>=2.9.0",
  "jinja2>=3.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0"
]

[project.scripts]
tokenwatch = "src.cli:main"

[tool.setuptools]
py-modules = ["main"]
packages = ["config", "src", "src.api", "src.core", "src.middleware", "src.models", "src.services"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["templates/*.html"]
